Misc/RDS PostgreSQL QuickSight/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "main"
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "ca-central-1a"

  tags = {
    Name = "public"
  }
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "ca-central-1b"

  tags = {
    Name = "private"
  }
}

resource "aws_subnet" "database" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = "ca-central-1d"

  tags = {
    Name = "database"
  }
}

resource "aws_db_subnet_group" "database" {
  name       = "database"
  subnet_ids = [aws_subnet.private.id, aws_subnet.database.id]

  tags = {
    Name = "database"
  }
}

# resource "aws_iam_role" "vpc_connection_role" {
#   assume_role_policy = jsonencode({
#     Version = "2012-10-17"
#     Statement = [
#       {
#         Effect = "Allow"
#         Action = "sts:AssumeRole"
#         Principal = {
#           Service = "quicksight.amazonaws.com"
#         }
#       }
#     ]
#   })
#   inline_policy {
#     name = "QuickSightVPCConnectionRolePolicy"
#     policy = jsonencode({
#       Version = "2012-10-17"
#       Statement = [
#         {
#           Effect = "Allow"
#           Action = [
#             "ec2:CreateNetworkInterface",
#             "ec2:ModifyNetworkInterfaceAttribute",
#             "ec2:DeleteNetworkInterface",
#             "ec2:DescribeSubnets",
#             "ec2:DescribeSecurityGroups"
#           ]
#           Resource = ["*"]
#         }
#       ]
#     })
#   }
# }

# resource "aws_quicksight_vpc_connection" "rds" {
#   vpc_connection_id  = "rds-id"
#   name               = "RDS"
#   role_arn           = aws_iam_role.vpc_connection_role.arn
#   security_group_ids = [aws_security_group.quicksight.id]
#   subnet_ids         = [aws_subnet.private.id, aws_subnet.database.id]

# }
